--- a/src/faq/faq.directive.html
+++ b/src/faq/faq.directive.html
@@ -1,13 +1,13 @@
 <div class="ap-faq">
-    <h3>{{ vm.header }}</h3>
+    <h3 ng-bind="header"></h3>
     <ul class="list-unstyled">
         <li class="ap-faq__item"
-            ng-repeat="item in vm.items"
+            ng-repeat="item in items"
             ng-click="item.opened = !item.opened">
             <div class="ap-faq__item__q"
-                 ng-class="{'ap-active' : item.opened}">
-                {{ item.q }}
-            </div>
+                 ng-class="{'ap-active' : item.opened}"
+                 ng-bind="item.q"
+            ></div>
             <div ng-show="item.opened" class="ap-faq__item__a" ng-bind-html="item.a"></div>
         </li>
     </ul>
